--- a/test.css
+++ b/test.css
@@ -6,3 +6,31 @@
     color: rgb(52, 165, 42);
     cursor:url("https://cdn4.iconfinder.com/data/icons/emoji-18/61/4-64.png") ,auto ;
 }
+.container{
+    display: flex;
+    justify-content: space-around;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: row-reverse;
+    height: 500px;
+    border: 2px dashed black;
+
+}
+.box{
+    padding: 20px;
+    background-color: red;
+    width: 110px;
+    height: 110px;
+}
+.box2{
+    padding: 20px;
+    background-color: greenyellow;
+    width: 110px;
+    height: 110px;
+}
+.box3{
+    padding: 20px;
+    background-color: blue;
+    width: 110px;
+    height: 110px;
+}
